[gd_scene load_steps=15 format=3 uid="uid://dxj38e6oi1fks"]

[ext_resource type="Script" path="res://src/main/scene/Game/Game.gd" id="1_cjc8i"]
[ext_resource type="PackedScene" uid="uid://362bu6nb0c06" path="res://src/main/scene/player/Player.tscn" id="1_txgxb"]
[ext_resource type="Script" path="res://src/main/scene/Game/Camera2D.gd" id="2_6g41s"]
[ext_resource type="PackedScene" uid="uid://1xsm8tyc5nkt" path="res://src/main/scene/ball/Ball.tscn" id="2_7hsiy"]
[ext_resource type="PackedScene" uid="uid://usucrvl1t6aj" path="res://src/main/scene/player/BotPlayer.tscn" id="3_gmrku"]
[ext_resource type="Script" path="res://src/main/gdscript/Wall.gd" id="4_x2sw3"]
[ext_resource type="Script" path="res://src/main/gdscript/Goal.gd" id="5_1la1h"]
[ext_resource type="Texture2D" uid="uid://c2ih1jb7ir4v0" path="res://src/main/resource/Sprites/ScodeBoard.png" id="7_i8cj7"]
[ext_resource type="LabelSettings" uid="uid://6lhxwbwmxxtp" path="res://src/main/resource/score_label_settings.tres" id="8_h7w7x"]
[ext_resource type="AudioStream" uid="uid://b3nk2xyilnl0" path="res://src/main/resource/SFX/Goal.wav" id="9_13i2b"]
[ext_resource type="Texture2D" uid="uid://e8wa568am1w1" path="res://src/main/resource/Sprites/Light.png" id="11_s0o2o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3h4we"]
size = Vector2(1280, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oonae"]
size = Vector2(107, 740)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y50iv"]
texture = ExtResource("7_i8cj7")

[node name="Game" type="Node2D"]
script = ExtResource("1_cjc8i")

[node name="MainLayer" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="MainLayer"]
offset = Vector2(640, 360)
ignore_rotation = false
position_smoothing_enabled = true
rotation_smoothing_enabled = true
script = ExtResource("2_6g41s")

[node name="ShakeTimer" type="Timer" parent="MainLayer/Camera2D"]
wait_time = 0.5
one_shot = true

[node name="Table" type="ColorRect" parent="MainLayer"]
offset_left = 51.0
offset_top = 35.0
offset_right = 1229.0
offset_bottom = 685.0
color = Color(0.0588235, 0.156863, 0.152941, 1)

[node name="Lines" type="Node2D" parent="MainLayer/Table"]
position = Vector2(-51, 0)

[node name="Line2D" type="Line2D" parent="MainLayer/Table/Lines"]
points = PackedVector2Array(50, 0, 50, 650)
width = 4.0

[node name="Line2D2" type="Line2D" parent="MainLayer/Table/Lines"]
points = PackedVector2Array(640, 0, 640, 650)
width = 4.0

[node name="Line2D3" type="Line2D" parent="MainLayer/Table/Lines"]
points = PackedVector2Array(1230, 0, 1230, 650)
width = 4.0

[node name="Line2D4" type="Line2D" parent="MainLayer/Table/Lines"]
points = PackedVector2Array(48, 0, 1232, 0)
width = 4.0

[node name="Line2D5" type="Line2D" parent="MainLayer/Table/Lines"]
points = PackedVector2Array(48, 650, 1232, 650)
width = 4.0

[node name="Player" parent="MainLayer" instance=ExtResource("1_txgxb")]
position = Vector2(100, 360)

[node name="BotPlayer" parent="MainLayer" instance=ExtResource("3_gmrku")]
position = Vector2(1180, 360)
ball_node_path = NodePath("../Ball")

[node name="Ball" parent="MainLayer" instance=ExtResource("2_7hsiy")]
position = Vector2(640, 360)
player1_node_path = NodePath("../Player")
player2_node_path = NodePath("../BotPlayer")

[node name="Walls" type="Node2D" parent="MainLayer"]

[node name="WallTop" type="StaticBody2D" parent="MainLayer/Walls" groups=["Wall"]]
script = ExtResource("4_x2sw3")
normal = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainLayer/Walls/WallTop"]
position = Vector2(640, 18)
shape = SubResource("RectangleShape2D_3h4we")

[node name="WallBottom" type="StaticBody2D" parent="MainLayer/Walls" groups=["Wall"]]
position = Vector2(0, 720)
script = ExtResource("4_x2sw3")
normal = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainLayer/Walls/WallBottom"]
position = Vector2(640, -18)
shape = SubResource("RectangleShape2D_3h4we")

[node name="GoalPlayer1" type="Area2D" parent="MainLayer"]
position = Vector2(-5, 360)
script = ExtResource("5_1la1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainLayer/GoalPlayer1"]
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_oonae")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="GoalPlayer2" type="Area2D" parent="MainLayer"]
position = Vector2(1280, 360)
script = ExtResource("5_1la1h")
player1 = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainLayer/GoalPlayer2"]
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_oonae")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScorePanel" type="Panel" parent="UI"]
custom_minimum_size = Vector2(120, 60)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_y50iv")

[node name="ScoreGrid" type="GridContainer" parent="UI/ScorePanel"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
size_flags_horizontal = 4
columns = 2

[node name="Player1Score" type="Label" parent="UI/ScorePanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"
label_settings = ExtResource("8_h7w7x")
horizontal_alignment = 1

[node name="Player2Score" type="Label" parent="UI/ScorePanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "10"
label_settings = ExtResource("8_h7w7x")
horizontal_alignment = 1

[node name="GoalPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_13i2b")

[node name="GoalTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="GoalTimer"]

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(641, 361)
color = Color(0.901961, 0.921569, 0.913725, 1)
shadow_enabled = true
texture = ExtResource("11_s0o2o")
texture_scale = 5.05

[connection signal="timeout" from="MainLayer/Camera2D/ShakeTimer" to="MainLayer/Camera2D" method="_on_shake_timer_timeout"]
[connection signal="goal_scored" from="MainLayer/Ball" to="." method="_on_ball_goal_scored"]
[connection signal="timeout" from="GoalTimer" to="." method="_on_goal_timer_timeout"]
